--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "zustand": "^3.7.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.2",
