--- a/package.json
+++ b/package.json
@@ -22,11 +22,16 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.14.0",
+    "@typescript-eslint/parser": "^5.14.0",
     "@vitejs/plugin-react": "^1.0.7",
     "@vitest/ui": "^0.6.0",
     "autoprefixer": "^10.4.2",
+    "eslint": "^8.10.0",
+    "eslint-plugin-react": "^7.29.3",
     "jsdom": "^19.0.0",
     "postcss": "^8.4.8",
+    "prettier": "2.5.1",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.5.4",
     "vite": "^2.8.6",
